{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 116,
  "lineage": "0289ac7e-810c-6d0c-f577-aa29c76b2b1f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mynetworkinc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/741f607e-5ee2-420c-a1f4-3fc69ee59cba/resourceGroups/erricsongrp/providers/Microsoft.Network/networkInterfaces/erricson-network-nic",
            "internal_domain_name_suffix": "gqsrrpzcdosurogcn4mkrwfagc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/741f607e-5ee2-420c-a1f4-3fc69ee59cba/resourceGroups/erricsongrp/providers/Microsoft.Network/publicIPAddresses/erricson-public-ip",
                "subnet_id": "/subscriptions/741f607e-5ee2-420c-a1f4-3fc69ee59cba/resourceGroups/erricsongrp/providers/Microsoft.Network/virtualNetworks/erricson-network-1/subnets/erricson-subnet"
              }
            ],
            "location": "eastus",
            "name": "erricson-network-nic",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "erricsongrp"
          },
          "dependencies": [
            "azurerm_public_ip.mypublicip",
            "azurerm_resource_group.mygr",
            "azurerm_subnet.mysubnet",
            "azurerm_virtual_network.mynetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mysecurity_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/741f607e-5ee2-420c-a1f4-3fc69ee59cba/resourceGroups/erricsongrp/providers/Microsoft.Network/networkSecurityGroups/erricson-security-group",
            "location": "eastus",
            "name": "erricson-security-group",
            "resource_group_name": "erricsongrp",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.mygr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "myhttprule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/741f607e-5ee2-420c-a1f4-3fc69ee59cba/resourceGroups/erricsongrp/providers/Microsoft.Network/networkSecurityGroups/erricson-security-group/securityRules/allowhttp",
            "name": "allowhttp",
            "network_security_group_name": "erricson-security-group",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "erricsongrp",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mysecurity_group",
            "azurerm_resource_group.mygr"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mypublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/741f607e-5ee2-420c-a1f4-3fc69ee59cba/resourceGroups/erricsongrp/providers/Microsoft.Network/publicIPAddresses/erricson-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "erricson-public-ip",
            "resource_group_name": "erricsongrp",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.mygr",
            "azurerm_subnet.mysubnet",
            "azurerm_virtual_network.mynetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mysubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.1.0/25"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/741f607e-5ee2-420c-a1f4-3fc69ee59cba/resourceGroups/erricsongrp/providers/Microsoft.Network/virtualNetworks/erricson-network-1/subnets/erricson-subnet",
            "name": "erricson-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "erricsongrp",
            "virtual_network_name": "erricson-network-1"
          },
          "dependencies": [
            "azurerm_resource_group.mygr",
            "azurerm_virtual_network.mynetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mygroupassociation",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/741f607e-5ee2-420c-a1f4-3fc69ee59cba/resourceGroups/erricsongrp/providers/Microsoft.Network/virtualNetworks/erricson-network-1/subnets/erricson-subnet",
            "network_security_group_id": "/subscriptions/741f607e-5ee2-420c-a1f4-3fc69ee59cba/resourceGroups/erricsongrp/providers/Microsoft.Network/networkSecurityGroups/erricson-security-group",
            "subnet_id": "/subscriptions/741f607e-5ee2-420c-a1f4-3fc69ee59cba/resourceGroups/erricsongrp/providers/Microsoft.Network/virtualNetworks/erricson-network-1/subnets/erricson-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.mysecurity_group",
            "azurerm_resource_group.mygr",
            "azurerm_subnet.mysubnet",
            "azurerm_virtual_network.mynetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mynetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.1.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "bf182534-1b22-48a5-b8c2-6f98a8d8a032",
            "id": "/subscriptions/741f607e-5ee2-420c-a1f4-3fc69ee59cba/resourceGroups/erricsongrp/providers/Microsoft.Network/virtualNetworks/erricson-network-1",
            "location": "eastus",
            "name": "erricson-network-1",
            "resource_group_name": "erricsongrp",
            "tags": {
              "envinoment": "prepod",
              "project": "crbt"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mygr"
          ]
        }
      ]
    }
  ]
}